--- a/css/template10.css
+++ b/css/template10.css
@@ -43,7 +43,7 @@ img {
     font-weight: bold;
 }
 
-.profile-info .value {}
+/* .profile-info .value {} */
 
 .social-media:hover {
     cursor: pointer;
