--- a/css/template01.css
+++ b/css/template01.css
@@ -139,18 +139,6 @@
         margin: 30px auto;
     }
 
-    .cv:hover {
-        cursor: grab;
-        cursor: -moz-grab;
-        cursor: -webkit-grab;
-    }
-
-    .cv:active {
-        cursor: grabbing;
-        cursor: -moz-grabbing;
-        cursor: -webkit-grabbing;
-    }
-
     .mainDetails {
         padding: 25px 35px;
         border-bottom: 2px solid #cf8a05;
@@ -159,30 +147,20 @@
 
     #name h1 {
         font-size: 2.5em;
-        //font-weight: 700;
+        /* //font-weight: 700; */
         font-family: "Gudea", Helvetica, arial, sans-serif;
-        //font-feature-settings: "caps", "sups" 1;
-        //margin-bottom: -6px;
+        /* //font-feature-settings: "caps", "sups" 1; */
+        /* //margin-bottom: -6px; */
     }
 
     #name h2 {
         font-size: 2em;
-        // margin-left: 2px;
+        /* // margin-left: 2px; */
         font-family: "Gudea", Helvetica, arial, sans-serif;
     }
 
     #mainArea {
         padding: 0 40px;
-    }
-
-    /* I deeply love breakfast burritos */
-    .wrap {
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    }
-
-    .wrap:hover {
-        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     }
 
     #headshot {
@@ -272,7 +250,7 @@
 
     .subDetails {
         font-size: 80%;
-        //font-style: italic;
+        /* //font-style: italic; */
         margin-bottom: 3px;
     }
 
@@ -377,146 +355,7 @@
         }
     }
 
-    @media print {
-        .cv {
-            width: 100%;
-        }
-    }
-
-
-
-
-
-
-
-
-
-    @-webkit-keyframes reset {
-        0% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 0;
-        }
-    }
-
-    @-webkit-keyframes fade-in {
-        0% {
-            opacity: 0;
-        }
-
-        40% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 1;
-        }
-    }
-
-    @-moz-keyframes reset {
-        0% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 0;
-        }
-    }
-
-    @-moz-keyframes fade-in {
-        0% {
-            opacity: 0;
-        }
-
-        40% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 1;
-        }
-    }
-
-    @keyframes reset {
-        0% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 0;
-        }
-    }
-
-    @keyframes fade-in {
-        0% {
-            opacity: 0;
-        }
-
-        40% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 1;
-        }
-    }
-
-    .instaFade {
-        -webkit-animation-name: reset, fade-in;
-        -webkit-animation-duration: 1.5s;
-        -webkit-animation-timing-function: ease-in;
-
-        -moz-animation-name: reset, fade-in;
-        -moz-animation-duration: 1.5s;
-        -moz-animation-timing-function: ease-in;
-
-        animation-name: reset, fade-in;
-        animation-duration: 1.5s;
-        animation-timing-function: ease-in;
-    }
-
-    .quickFade {
-        -webkit-animation-name: reset, fade-in;
-        -webkit-animation-duration: 2.5s;
-        -webkit-animation-timing-function: ease-in;
-
-        -moz-animation-name: reset, fade-in;
-        -moz-animation-duration: 2.5s;
-        -moz-animation-timing-function: ease-in;
-
-        animation-name: reset, fade-in;
-        animation-duration: 2.5s;
-        animation-timing-function: ease-in;
-    }
-
-    .delayOne {
-        -webkit-animation-delay: 0, 0.5s;
-        -moz-animation-delay: 0, 0.5s;
-        animation-delay: 0, 0.5s;
-    }
-
-    .delayTwo {
-        -webkit-animation-delay: 0, 1s;
-        -moz-animation-delay: 0, 1s;
-        animation-delay: 0, 1s;
-    }
-
-    .delayThree {
-        -webkit-animation-delay: 0, 1.5s;
-        -moz-animation-delay: 0, 1.5s;
-        animation-delay: 0, 1.5s;
-    }
-
-    .delayFour {
-        -webkit-animation-delay: 0, 2s;
-        -moz-animation-delay: 0, 2s;
-        animation-delay: 0, 2s;
-    }
-
-    .delayFive {
-        -webkit-animation-delay: 0, 2.5s;
-        -moz-animation-delay: 0, 2.5s;
-        animation-delay: 0, 2.5s;
-    }
+    /* .html2canvas-container {
+        width: 100% !important;
+        min-height: 30000px !important;
+    } */
