--- a/css/downloadButton.css
+++ b/css/downloadButton.css
@@ -1,68 +1,68 @@
 .buttonDownloadContainer {
-width: 100%;
-text-align: center;
+width: 100% !important;
+text-align: center !important;
 }
 
 
 .buttonDownload {
-    display: inline-block;
-    position: relative;
-    padding: 10px 25px;
+    display: inline-block !important;
+    position: relative !important;
+    padding: 10px 25px !important;
 
-    background-color: #428BCA;
-    color: white;
+    background-color: #428BCA !important;
+    color: white !important;
 
-    font-family: sans-serif;
-    text-decoration: none;
-    font-size: 0.9em;
-    text-align: center;
-    text-indent: 15px;
+    font-family: sans-serif !important;
+    text-decoration: none !important;
+    font-size: 0.9em !important;
+    text-align: center !important;
+    text-indent: 15px !important;
 }
 
 .buttonDownload:hover {
-    background-color: #144984;
-    color: white;
+    background-color: #144984 !important;
+    color: white !important;
 }
 
 .buttonDownload:before,
 .buttonDownload:after {
     content: ' ';
-    display: block;
-    position: absolute;
-    left: 15px;
-    top: 52%;
+    display: block !important;
+    position: absolute !important;
+    left: 15px !important;
+    top: 52% !important;
 }
 
 /* Download box shape  */
 .buttonDownload:before {
-    width: 10px;
-    height: 2px;
-    border-style: solid;
-    border-width: 0 2px 2px;
+    width: 10px !important;
+    height: 2px !important;
+    border-style: solid !important;
+    border-width: 0 2px 2px !important;
 }
 
 /* Download arrow shape */
 .buttonDownload:after {
-    width: 0;
-    height: 0;
-    margin-left: 3px;
-    margin-top: -7px;
+    width: 0 !important;
+    height: 0 !important;
+    margin-left: 3px !important;
+    margin-top: -7px !important;
 
-    border-style: solid;
-    border-width: 4px 4px 0 4px;
-    border-color: transparent;
-    border-top-color: inherit;
+    border-style: solid !important;
+    border-width: 4px 4px 0 4px !important;
+    border-color: transparent !important;
+    border-top-color: inherit !important;
 
     animation: downloadArrow 2s linear infinite;
     animation-play-state: paused;
 }
 
 .buttonDownload:hover:before {
-    border-color: #fff;
+    border-color: #fff !important;
 }
 
 .buttonDownload:hover:after {
-    border-top-color: #fff;
+    border-top-color: #fff !important;
     animation-play-state: running;
 }
 
