--- a/css/template04.css
+++ b/css/template04.css
@@ -37,7 +37,7 @@
     .resume {
         width: 870px;
         background: #fbfbfb;
-        margin: 20px auto;
+        margin: auto;
         border: 1px solid #bbb;
         box-shadow: 0 0 20px -3px #bbb;
         position: relative;
@@ -158,47 +158,6 @@
         bottom: 0;
         left: 0;
         transition-duration: 0.3s;
-    }
-
-    .resume .base .follow .box {
-        text-align: center;
-        vertical-align: middle;
-    }
-
-    .resume .base .follow .box a {
-        display: inline-block;
-        vertical-align: text-bottom;
-    }
-
-    .resume .base .follow .box a:hover i {
-        background: #e07a5f;
-        border-radius: 5px;
-        transform: rotate(45deg) scale(0.8);
-    }
-
-    .resume .base .follow .box a:hover i::before {
-        transform: rotate(-45deg) scale(1.5);
-    }
-
-    .resume .base .follow .box i {
-        display: inline-block;
-        font-size: 30px;
-        background: #8d9e78;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        line-height: 60px;
-        color: #fcfcfc;
-        margin: 0 10px 10px 10px;
-        transition-duration: 0.3s;
-    }
-
-    .resume .base .follow .box i::before {
-        transition-duration: 0.3s;
-    }
-
-    .resume .base .follow .box i.fa::before {
-        display: block;
     }
 
     .resume .func {
