--- a/css/template06.css
+++ b/css/template06.css
@@ -7,11 +7,13 @@ html {
 }
 
 body {
-    margin: 2.2rem
+    margin-left: 100px
 }
 
 div#resume {
-    min-width: 310px;
+    padding-left: 40px;
+    padding-top: 40px;
+    width: 960px;
     font: 16px Helvetica, Avernir, sans-serif;
     line-height: 24px;
     color: #000
