--- a/css/template09.css
+++ b/css/template09.css
@@ -5,6 +5,10 @@ html {
     background-color: #fafafa;
 }
 
+.resume-wrapper{
+    width: 960px
+}
+
 /* Header */
 
 header {
@@ -93,7 +97,7 @@ header p {
     margin-bottom: 1em;
 
     background-color: white;
-    width: 60%;
+    /* width: 100%; */
 
     padding: 0.5em 0 0.5em 0;
 
